redidi narratoin page to be on timer and fixed some back end timer stuff like begin timer being called too much

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -126,6 +126,7 @@
   height: 30px;
   width: 200px;
   border-radius: 0px;
+  margin-bottom: 10px;
   border: none;
   border-bottom: 1px solid rgb(191, 4, 4);
 }
